# Detection-API

./: .env.example  .gitignore  Makefile  README  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/src/: config.py  main.py
backend/src/api/: dependencies.py  schemas.py
backend/src/api/v1/: auth_routes.py  camera_routes.py  detection_routes.py
backend/src/application/camera/: commands.py  handlers.py
backend/src/application/detection/: commands.py  handlers.py
backend/src/application/user/: commands.py  handlers.py
backend/src/domain/camera/: entities.py  repository.py  value_objects.py
backend/src/domain/detection/: entities.py  exceptions.py  repository.py  services.py  value_objects.py
backend/src/domain/user/: entities.py  exceptions.py  repository.py  value_objects.py
backend/src/infrastructure/: redis.py
backend/src/infrastructure/auth/: jwt.py  password.py
backend/src/infrastructure/detection/: camera_stream.py  worker.py  yolo_service.py
backend/src/infrastructure/persistence/: camera_repo.py  database.py  detection_repo.py  models.py  user_repo.py
backend/tests/bdd/features/: auth.feature  detection.feature
backend/tests/bdd/steps/: test_auth_steps.py
backend/tests/unit/application/: test_detection_handlers.py  test_user_handlers.py
backend/tests/unit/domain/: test_detection.py  test_user.py
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx
(+1 files in other folders)
